# rust-serde-sample

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
csv/: Cargo.toml
csv/src/: lib.rs  pattern_1.rs  pattern_2.rs
