[package]
name = "csv"
version = "0.1.0"
authors = ["nrskt <norisuke_takafuji@caddi.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core"}
serde = { version = "*", features = ["derive"]}
csv = "*"
serde_json = "*"
